code rationalisation, extra classes and tests and renaming from Generic to Math